@@ -2,12 +2,11 @@
 -----
 
 multidimensional functions (how to enter in non formula mode? - DEACTIVATE it)
-
+	how to enter? problem: if locale decimal point is comma!
+	
 treeview: rightclickcontext menu, drag and drop into entry
 
 ng_view: copy/cut/paste to clipboard
-
-ng_view: problem with radio menus again
 
 1.3.1
 -----
