@@ -13,7 +13,7 @@ glade_DATA = about.glade \
 		dispctrl_right.glade \
 		dispctrl_right_vertical.glade \
 		classic_view.glade \
-		ng_view.glade
+		paper_view.glade
 
 EXTRA_DIST = $(glade_DATA)
 
